bootstrap tutorial: fixed incorrect height and misalignment of the contents in the center

--- a/Bootstrap/bootstrap-angular/src/app/app.component.css
+++ b/Bootstrap/bootstrap-angular/src/app/app.component.css
@@ -1,11 +1,29 @@
-html, body {
-  height: 100%;
+
+
+img {
+  max-width: 100%;
 }
 
+/* cover */
+
 #cover {
-  background: #222 url("/assets/img/stars.jpg") center center no-repeat;
+  background: #222 url('/assets/img/stars.jpg') center center no-repeat;
   background-size: cover;
   color: white;
   height: 100%;
   text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.form-group>input {
+  width: 100%;
+}
+
+#cover-caption {
+  width: 100%;
+}
+
+.section-content {
+  padding: 5rem 0;
 }
